# gnomon-mcp

./: .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
skills/gnomon/: SKILL.md
src/gnomon_mcp/: __main__.py  server.py
src/gnomon_mcp/tools/: calc_tools.py  calendar_tools.py
tests/: test_calc.py  test_calendar.py
